--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -1,4 +1,7 @@
-streamlit==1.22.0
-llama-index==0.6.0.alpha6
 python-dotenv==1.0.0
 flask==2.3.2
+PyPDF2==3.0.1
+langchain==0.0.181
+tiktoken==0.4.0
+faiss-cpu==1.7.4
+openai==0.27.7
