add product suggestion endpoint

--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,11 @@
 OPENAI_API_KEY=
+
+NEXTAUTH_URL=https://...
+NEXT_PUBLIC_VIEWER_URL=https://...
+ENCRYPTION_SECRET=
+ADMIN_EMAIL=
+SMTP_USERNAME=
+SMTP_PASSWORD=
+SMTP_HOST=
+SMTP_PORT=
+NEXT_PUBLIC_SMTP_FROM="'Typebot Notifications' <mail@example.org>"
